uploaded cards. I am doing the desigh.

--- a/index.html
+++ b/index.html
@@ -73,8 +73,55 @@
                     <li>вами</li>
                 </ul>
             </div>
-            <section class="about us">
-                
+            <section class="about_us">
+                <div class="img_phone">
+              <img src="images/dom_v_kruge.png" alt="" class="img_roof">  
+              <h3>позвоните нам<br>+7(921)746-61-06</h3>
+            </div>
+            <div class="we">
+                <h3>о нас</h3>
+                <ul>
+                    <li class="first_li">Собственное производство</li>
+                    <li class="first_li">Быстрое изготовление<br>
+                        изделий из листового<br>
+                        металла</li>
+                    <li class="first_li">Изготовление планок<br>
+                    любой конфигурации<br>
+                    по ВАШИМ размерам</li>
+                    <li class="first_li">Толщина металла:<br>0.4 - 0.7 мм</li>
+                    <li>Цвета на карте RAL, RR</li>
+                </ul>
+            </div>
+            </section>
+            <section class="production">
+                <h3>что мы производим</h3>
+            <img src="images/House_write.png" alt="image house">
+            </section>
+            <section class="metal_card_1">
+                <h3>Кровельные металлические аксессуары</h3>
+                <div class="card_1">
+                    <div class="c_d card_number_1">
+                        <div class="content">
+                        <h4>Конёк фигурный</h4>
+                        <p>110*15*40*110 мм<br>150*15*40*150 мм</p>
+                    </div>
+                    </div>
+                    <div class="c_d card_number_2"></div>
+                    <div class="c_d card_number_3"></div>
+                    <div class="c_d card_number_4"></div>
+                    <div class="c_d card_number_5"></div>
+                    <div class="c_d card_number_6"></div>
+                    <div class="c_d card_number_7"></div>
+                    <div class="c_d card_number_8"></div>
+                    <div class="c_d card_number_9"></div>
+                    <div class="c_d card_number_10"></div>
+                    <div class="c_d card_number_11"></div>
+                    <div class="c_d card_number_12"></div>
+                    <div class="c_d card_number_13"></div>
+                    <div class="c_d card_number_14"></div>
+                    <div class="c_d card_number_15"></div>
+                    <div class="c_d card_number_16"></div>
+                </div>
             </section>
         </main>
         <footer></footer>
