bottom of the site

--- a/index.html
+++ b/index.html
@@ -106,25 +106,172 @@
                         <p>110*15*40*110 мм<br>150*15*40*150 мм</p>
                     </div>
                     </div>
-                    <div class="c_d card_number_2"></div>
-                    <div class="c_d card_number_3"></div>
-                    <div class="c_d card_number_4"></div>
-                    <div class="c_d card_number_5"></div>
-                    <div class="c_d card_number_6"></div>
-                    <div class="c_d card_number_7"></div>
-                    <div class="c_d card_number_8"></div>
-                    <div class="c_d card_number_9"></div>
-                    <div class="c_d card_number_10"></div>
-                    <div class="c_d card_number_11"></div>
-                    <div class="c_d card_number_12"></div>
-                    <div class="c_d card_number_13"></div>
-                    <div class="c_d card_number_14"></div>
-                    <div class="c_d card_number_15"></div>
-                    <div class="c_d card_number_16"></div>
+                    <div class="c_d card_number_2">
+                        <div class="content">
+                            <h4></h4>
+                            <p><br></p>
+                        </div>
+                    </div>
+                    <div class="c_d card_number_3">
+                        <div class="content">
+                            <h4></h4>
+                            <p><br></p>
+                        </div>
+                    </div>
+                    <div class="c_d card_number_4">
+                        <div class="content">
+                            <h4></h4>
+                            <p><br></p>
+                        </div>
+                    </div>
+                    <div class="c_d card_number_5">
+                        <div class="content">
+                            <h4></h4>
+                            <p><br></p>
+                        </div>
+                    </div>
+                    <div class="c_d card_number_6">
+                        <div class="content">
+                            <h4></h4>
+                            <p><br></p>
+                        </div>
+                    </div>
+                    <div class="c_d card_number_7">
+                        <div class="content">
+                            <h4></h4>
+                            <p><br></p>
+                        </div>
+                    </div>
+                    <div class="c_d card_number_8">
+                        <div class="content">
+                            <h4></h4>
+                            <p><br></p>
+                        </div>
+                    </div>
+                    <div class="c_d card_number_9">
+                        <div class="content">
+                            <h4></h4>
+                            <p><br></p>
+                        </div>
+                    </div>
+                    <div class="c_d card_number_10">
+                        <div class="content">
+                            <h4></h4>
+                            <p><br></p>
+                        </div>
+                    </div>
+                    <div class="c_d card_number_11">
+                        <div class="content">
+                            <h4></h4>
+                            <p><br></p>
+                        </div>
+                    </div>
+                    <div class="c_d card_number_12">
+                        <div class="content">
+                            <h4></h4>
+                            <p><br></p>
+                        </div>
+                    </div>
+                    <div class="c_d card_number_13">
+                        <div class="content">
+                            <h4></h4>
+                            <p><br></p>
+                        </div>
+                    </div>
+                    <div class="c_d card_number_14">
+                        <div class="content">
+                            <h4></h4>
+                            <p><br></p>
+                        </div>
+                    </div>
+                    <div class="c_d card_number_15">
+                        <div class="content">
+                            <h4></h4>
+                            <p><br></p>
+                        </div>
+                    </div>
+                    <div class="c_d card_number_16">
+                        <div class="content">
+                            <h4></h4>
+                            <p><br></p>
+                        </div>
+                    </div>
                 </div>
             </section>
+            <section class="cont_phone_center">
+                <h3>ждём ваших звонков <b>+7(921)746-61-06</b> с 9:00 до 19:00<br>воскресенье: выходной</h3>
+            </section>
+            <section class="metal_card_1">
+                <h3>фасадные металлические аксессуары</h3>
+                <div class="card_1">
+                    <div class="c_d card_number_17">
+                        <div class="content">
+                            <h4></h4>
+                            <p><br></p>
+                        </div>
+                    </div>
+                    <div class="c_d card_number_18">
+                        <div class="content">
+                            <h4></h4>
+                            <p><br></p>
+                        </div>
+                    </div>
+                    <div class="c_d card_number_19">
+                        <div class="content">
+                            <h4></h4>
+                            <p><br></p>
+                        </div>
+                    </div>
+                    <div class="c_d card_number_20">
+                        <div class="content">
+                            <h4></h4>
+                            <p><br></p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="other">
+                <h3>п-образные профили</h3>
+                <div class="other_card">
+                    <div class="other_card_21">
+
+                    </div>
+                    <div class="announcement">
+
+                    </div>
+                </div>
+            </section>
+
         </main>
-        <footer></footer>
+        <footer>
+            <div class="contact_local">
+                <ul class="ul_footer">
+                    <li>Наш адрес:</li>
+                    <li>Санкт-Петербург,</li>
+                    <li>Курортный район</li>
+                    <li>г. Зеленогорск</li>
+                    <li>ул.Путейская дом 1</li>
+                </ul>
+                    <div class="map">
+                <img src="images/map_1313.png" class="map_footer" alt="image map">
+            </div>
+                <ul class="ul_footer">
+                    <li>Телефон</li>
+                    <li>+7(921)746-61-06</li>
+                    <li>Часы работы:</li>
+                    <li>с 9:00 до 19:00</li>
+                    <li>выходной: воскресенье</li>
+                </ul>
+
+            </div>
+            <div class="contact_inet">
+            <ul>
+                <li>zelenogorskstroy@mail.ru</li>
+                <li>&copy;Магазин строительных материалов 2019-2021</li>
+                <li>Сайт сделан: <a href="vitstudio.ru">VitatiaStudio 2021</a></li>
+            </ul>
+            </div>
+        </footer>
     </div>
 
 
