filled out the cards

--- a/index.html
+++ b/index.html
@@ -101,99 +101,118 @@
                 <h3>Кровельные металлические аксессуары</h3>
                 <div class="card_1">
                     <div class="c_d card_number_1">
-                        <div class="content">
-                        <h4>Конёк фигурный</h4>
-                        <p>110*15*40*110 мм<br>150*15*40*150 мм</p>
+                        <div class="content_card">
+                        <h5>Конёк фигурный</h5>
+                        <p>110*15*40*15*110 мм<br>150*15*40*15*150 мм</p>
                     </div>
                     </div>
                     <div class="c_d card_number_2">
-                        <div class="content">
-                            <h4></h4>
-                            <p><br></p>
+                        <div class="content_card">
+                            <h5>Конек плоский <br>
+                                (угол наружный)</h5><br>
+                            <p>Размер индивидуальный</p>
                         </div>
                     </div>
                     <div class="c_d card_number_3">
-                        <div class="content">
-                            <h4></h4>
-                            <p><br></p>
+                        <div class="content_card">
+                            <h5>Торцевая планка<br>
+                            (ветровая)<br>
+                            для металлочерепицы</h5><br>
+                            <p>15*87*85*15мм</p>
                         </div>
                     </div>
                     <div class="c_d card_number_4">
-                        <div class="content">
-                            <h4></h4>
-                            <p><br></p>
+                        <div class="content_card">
+                            <h5>Ендова(большая)</h5><br>
+                            <p>13*300*300*13мм</p>
                         </div>
                     </div>
                     <div class="c_d card_number_5">
-                        <div class="content">
-                            <h4></h4>
-                            <p><br></p>
+                        <div class="content_card">
+                            <h5>Накладка ендовы</h5><br>
+                            <p>80*20*70*20*80мм</p>
                         </div>
                     </div>
                     <div class="c_d card_number_6">
-                        <div class="content">
-                            <h4></h4>
-                            <p><br></p>
+                        <div class="content_card">
+                            <h5>Карнизная планка<br>
+                                (капельник)<br>
+                                для металлочерепицы и<br>
+                                мягкой кровли</h5><br>
+                            <p>50*80*10мм и 80*50*10мм</p>
                         </div>
                     </div>
                     <div class="c_d card_number_7">
-                        <div class="content">
-                            <h4></h4>
-                            <p><br></p>
+                        <div class="content_card">
+                            <h5>Пристенная планка<br>
+                                (примыкание,<br>
+                                угол внутренний)
+                            </h5>
+                            <p>Размер индивидуальный</p>
                         </div>
                     </div>
                     <div class="c_d card_number_8">
-                        <div class="content">
-                            <h4></h4>
-                            <p><br></p>
+                        <div class="content_card">
+                          <h5>Торцевая планка<br>
+                            (ветровая)<br>
+                            для мягкой кровли
+                          </h5>
+                          <p>80*25*65*10мм</p> 
                         </div>
                     </div>
                     <div class="c_d card_number_9">
-                        <div class="content">
-                            <h4></h4>
-                            <p><br></p>
+                        <div class="content_card">
+                            <h4>Торцевая планка<br>
+                                (ветровая)<br>
+                                для мягкой кровли</h4>
+                            <p>Размер индивидуальный</p>
                         </div>
                     </div>
                     <div class="c_d card_number_10">
-                        <div class="content">
-                            <h4></h4>
-                            <p><br></p>
+                        <div class="content_card">
+                            <h5>Капельник конденсата</h5>
+                            <p>80*50*15*10мм</p>
                         </div>
                     </div>
                     <div class="c_d card_number_11">
-                        <div class="content">
-                            <h4></h4>
-                            <p><br></p>
+                        <div class="content_card">
+                            <h5>Пристенная планка<br>
+                                (для мягкой кровли)</h5>
+                            <p>10*40*15*10мм</p>
                         </div>
                     </div>
                     <div class="c_d card_number_12">
-                        <div class="content">
-                            <h4></h4>
-                            <p><br></p>
+                        <div class="content_card">
+                            <h5>Планка снегозадержания</h5>
+                            <p>45*65*95*45мм</p>
                         </div>
                     </div>
                     <div class="c_d card_number_13">
-                        <div class="content">
-                            <h4></h4>
-                            <p><br></p>
+                        <div class="content_card">
+                            <h5>Планка опорная<br>
+                                (фальцевая кровля)</h5>
+                            <p>30*35*61*15мм</p>
                         </div>
                     </div>
                     <div class="c_d card_number_14">
-                        <div class="content">
-                            <h4></h4>
-                            <p><br></p>
+                        <div class="content_card">
+                            <h5>Торцевая планка<br>
+                                (фальцевая кровля)</h5>
+                            <p>30*32*45*90*15мм</p>
                         </div>
                     </div>
                     <div class="c_d card_number_15">
-                        <div class="content">
-                            <h4></h4>
-                            <p><br></p>
+                        <div class="content_card">
+                            <h5>Планка соединительная<br>
+                                (фальцевая кровля)</h5>
+                            <p>100*125*15мм</p>
                         </div>
                     </div>
                     <div class="c_d card_number_16">
-                        <div class="content">
-                            <h4></h4>
-                            <p><br></p>
+                        <div class="content_card">
+                            <h5>Карнизная планка<br>
+                                (фальцевая кровля)</h5>
+                            <p>152*20*100*15мм</p>
                         </div>
                     </div>
                 </div>
@@ -205,27 +224,30 @@
                 <h3>фасадные металлические аксессуары</h3>
                 <div class="card_1">
                     <div class="c_d card_number_17">
-                        <div class="content">
-                            <h4></h4>
-                            <p><br></p>
+                        <div class="content_card">
+                            <h5>Джи профиль</h5>
+                            <p>Размер индивидуальный</p>
                         </div>
                     </div>
                     <div class="c_d card_number_18">
-                        <div class="content">
-                            <h4></h4>
-                            <p><br></p>
+                        <div class="content_card">
+                            <h5>Околооконная планка<br>
+                                (J-фаска)</h5>
+                            <p>Размер индивидуальный</p>
                         </div>
                     </div>
                     <div class="c_d card_number_19">
-                        <div class="content">
-                            <h4></h4>
-                            <p><br></p>
+                        <div class="content_card">
+                            <h5>Нащельник</h5>
+                            <p>Размер индивидуальный</p>
                         </div>
                     </div>
                     <div class="c_d card_number_20">
-                        <div class="content">
-                            <h4></h4>
-                            <p><br></p>
+                        <div class="content_card">
+                            <h5>Отлив<br>
+                                (цокольный,оконный)</h5>
+                            <p>20*n*20*10мм.<br>
+                                (n-размер индивидуальный)</p>
                         </div>
                     </div>
                 </div>
@@ -234,10 +256,22 @@
                 <h3>п-образные профили</h3>
                 <div class="other_card">
                     <div class="other_card_21">
-
+                        <h5>Парапеты</h5>
+                          <p>Размер индивидуальный</p>
                     </div>
                     <div class="announcement">
-
+                        <h4>а также всегда в продаже:</h4>
+                        <p>
+                            Комплексная реализация строительных<br>
+                            материалов для внешней облицовки<br>
+                            загородных домов
+                        </p>
+                        <p><strong>
+                            !!! Быстрое изготовление планок<br>
+                            любой конфигурации<br>
+                            по ВАШИМ РАЗМЕРАМ!!!
+                        </strong></p>
+                        <span>!</span>
                     </div>
                 </div>
             </section>
