--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
     <title>Гибка Зеленогорск</title>
 </head>
 
 <body>
+    <a href="#" class="button-top" title="Go to top">наверх</a>
     <div class="wrapper">
         <header>
             <nav class="navbar navbar-expand-lg">
@@ -27,13 +29,13 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="#">кровельные<br>аксессуары</a>
+                                <a class="nav-link" aria-current="page" href="#kr">кровельные<br>аксессуары</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">фасадные<br>аксессуары</a>
+                                <a class="nav-link" href="#fa">фасадные<br>аксессуары</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">п-образные<br>профили</a>
+                                <a class="nav-link" href="#pr">п-образные<br>профили</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -75,7 +77,7 @@
             </div>
             <section class="about_us">
                 <div class="img_phone">
-              <img src="images/dom_v_kruge.png" alt="" class="img_roof">  
+              <img src="images/dom_v_kruge.png" alt="image house" class="img_roof">  
               <h3>позвоните нам<br>+7(921)746-61-06</h3>
             </div>
             <div class="we">
@@ -98,7 +100,7 @@
             <img src="images/House_write.png" alt="image house">
             </section>
             <section class="metal_card_1">
-                <h3>Кровельные металлические аксессуары</h3>
+                <h3 id="kr">Кровельные металлические аксессуары</h3>
                 <div class="card_1">
                     <div class="c_d card_number_1">
                         <div class="content_card">
@@ -109,7 +111,7 @@
                     <div class="c_d card_number_2">
                         <div class="content_card">
                             <h5>Конек плоский <br>
-                                (угол наружный)</h5><br>
+                                (угол наружный)</h5>
                             <p>Размер индивидуальный</p>
                         </div>
                     </div>
@@ -117,19 +119,19 @@
                         <div class="content_card">
                             <h5>Торцевая планка<br>
                             (ветровая)<br>
-                            для металлочерепицы</h5><br>
+                            для металлочерепицы</h5>
                             <p>15*87*85*15мм</p>
                         </div>
                     </div>
                     <div class="c_d card_number_4">
                         <div class="content_card">
-                            <h5>Ендова(большая)</h5><br>
+                            <h5>Ендова(большая)</h5>
                             <p>13*300*300*13мм</p>
                         </div>
                     </div>
                     <div class="c_d card_number_5">
                         <div class="content_card">
-                            <h5>Накладка ендовы</h5><br>
+                            <h5>Накладка ендовы</h5>
                             <p>80*20*70*20*80мм</p>
                         </div>
                     </div>
@@ -138,7 +140,7 @@
                             <h5>Карнизная планка<br>
                                 (капельник)<br>
                                 для металлочерепицы и<br>
-                                мягкой кровли</h5><br>
+                                мягкой кровли</h5>
                             <p>50*80*10мм и 80*50*10мм</p>
                         </div>
                     </div>
@@ -221,7 +223,7 @@
                 <h3>ждём ваших звонков <b>+7(921)746-61-06</b> с 9:00 до 19:00<br>воскресенье: выходной</h3>
             </section>
             <section class="metal_card_1">
-                <h3>фасадные металлические аксессуары</h3>
+                <h3 id="fa">фасадные металлические аксессуары</h3>
                 <div class="card_1">
                     <div class="c_d card_number_17">
                         <div class="content_card">
@@ -253,11 +255,13 @@
                 </div>
             </section>
             <section class="other">
-                <h3>п-образные профили</h3>
+                <h3 id="pr">п-образные профили</h3>
                 <div class="other_card">
                     <div class="other_card_21">
+                        <div class="content_card_bottom">
                         <h5>Парапеты</h5>
                           <p>Размер индивидуальный</p>
+                        </div>
                     </div>
                     <div class="announcement">
                         <h4>а также всегда в продаже:</h4>
@@ -277,6 +281,7 @@
             </section>
 
         </main>
+    </div>
         <footer>
             <div class="contact_local">
                 <ul class="ul_footer">
@@ -284,7 +289,7 @@
                     <li>Санкт-Петербург,</li>
                     <li>Курортный район</li>
                     <li>г. Зеленогорск</li>
-                    <li>ул.Путейская дом 1</li>
+                    <li>ул. Путейская дом 1</li>
                 </ul>
                     <div class="map">
                 <img src="images/map_1313.png" class="map_footer" alt="image map">
@@ -302,11 +307,11 @@
             <ul>
                 <li>zelenogorskstroy@mail.ru</li>
                 <li>&copy;Магазин строительных материалов 2019-2021</li>
-                <li>Сайт сделан: <a href="vitstudio.ru">VitatiaStudio 2021</a></li>
+                <li>Сайт сделан: <a href="https://vitstudio.ru/#">VitatiaStudio</a></li>
             </ul>
             </div>
         </footer>
-    </div>
+    
 
 
     <!-- Дополнительный JavaScript; выберите один из двух! -->
@@ -315,6 +320,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
         crossorigin="anonymous"></script>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="script.js"></script>
 
     <!-- Вариант 2: Bootstrap JS отдельно от Popper
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
