write meta teg(description, keywords

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <!-- Обязательные метатеги -->
     <meta charset="utf-8">
+
+    <meta name="description" content="Санкт-Петербург-Зеленогорск.Собственное производство.Быстрое изготовление.Консультации.Заказ по телефону.Монтаж.Доставка,Толщина металла от 0.45мм-0.7мм.Звонить: 8 921 316-7-317">
+    <meta name="keywords" content="Зеленогорск,гибка металла,собственное производство,кровельные металлические аксессуары,фасадные металлические аксессуары,п-образные профиля,продажа,доставка,быстрое изготовление,комплексная реализация строительных материалов,размер индивидуальный,конек,Торцевая планка,Накладка ендовы,капельник для металлочерепицы,планка снегозадержания,джи,околооконная планка">
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
