--- a/index.html
+++ b/index.html
@@ -5,10 +5,32 @@
     <!-- Обязательные метатеги -->
     <meta charset="utf-8">
 
-    <meta name="description" content="Санкт-Петербург-Зеленогорск.Собственное производство.Быстрое изготовление.Консультации.Заказ по телефону.Монтаж.Доставка,Толщина металла от 0.45мм-0.7мм.Звонить: 8 921 316-7-317">
-    <meta name="keywords" content="Зеленогорск,гибка металла,собственное производство,кровельные металлические аксессуары,фасадные металлические аксессуары,п-образные профиля,продажа,доставка,быстрое изготовление,комплексная реализация строительных материалов,размер индивидуальный,конек,Торцевая планка,Накладка ендовы,капельник для металлочерепицы,планка снегозадержания,джи,околооконная планка">
+    <meta name="description"
+        content="Санкт-Петербург-Зеленогорск.Собственное производство.Быстрое изготовление.Консультации.Заказ по телефону.Монтаж.Доставка,Толщина металла от 0.45мм-0.7мм.Звонить: 8 921 316-7-317">
+    <meta name="keywords"
+        content="Зеленогорск,гибка металла,собственное производство,кровельные металлические аксессуары,фасадные металлические аксессуары,п-образные профиля,продажа,доставка,быстрое изготовление,комплексная реализация строительных материалов,размер индивидуальный,конек,Торцевая планка,Накладка ендовы,капельник для металлочерепицы,планка снегозадержания,джи,околооконная планка">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+        (function (m, e, t, r, i, k, a) {
+            m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+            m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+        })
+            (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+        ym(64975963, "init", {
+            clickmap: true,
+            trackLinks: true,
+            accurateTrackBounce: true,
+            webvisor: true
+        });
+    </script>
+    <noscript>
+        <div><img src="https://mc.yandex.ru/watch/64975963" style="position:absolute; left:-9999px;" alt="" /></div>
+    </noscript>
+    <!-- /Yandex.Metrika counter -->
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -19,53 +41,56 @@
 </head>
 
 <body>
-      <div class="container-fluid gibka_main">
+    <div class="container-fluid gibka_main">
         <a href="#" class="button-top" title="Go to top">наверх</a>
         <div class="wrapper">
 
             <header>
                 <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd00;">
                     <div class="container-fluid">
-                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                      </button>
-                      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                          <li class="nav-item">
-                            <a class="nav-link" href="#kr">кровельные<br>аксессуары</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="#fa">фасадные<br>аксессуары</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="#pr">п-образные<br>профили</a>
-                        </li>
-                          <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                услуги
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li class="dropdown-item">Консультация специалиста</li>
-                                <li class="dropdown-item">Расчет материалов</li>
-                                <li class="dropdown-item">Замеры</li>
-                                <li class="dropdown-item">Монтаж</li>
-                                <li class="dropdown-item">Заказ товаров по телефону</li>
-                                <li>
-                                    <hr class="dropdown-divider">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#kr">кровельные<br>аксессуары</a>
                                 </li>
-                           <!--    <li style="background-color: darksalmon;"><a class="dropdown-item" href="#" data-target="#exampleModal">Оплата</a></li> --> 
-                            </ul>
-                          </li>
-                          <li class="nav-item link_phone_nav">
-                            <a class="nav-link" href="#">позвоните нам<br>+7(921)746-61-06</a>
-                        </li>
-                          <!--<li class="nav-item">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#fa">фасадные<br>аксессуары</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#pr">п-образные<br>профили</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                        услуги
+                                    </a>
+                                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                        <li class="dropdown-item">Консультация специалиста</li>
+                                        <li class="dropdown-item">Расчет материалов</li>
+                                        <li class="dropdown-item">Замеры</li>
+                                        <li class="dropdown-item">Монтаж</li>
+                                        <li class="dropdown-item">Заказ товаров по телефону</li>
+                                        <li>
+                                            <hr class="dropdown-divider">
+                                        </li>
+                                        <!--    <li style="background-color: darksalmon;"><a class="dropdown-item" href="#" data-target="#exampleModal">Оплата</a></li> -->
+                                    </ul>
+                                </li>
+                                <li class="nav-item link_phone_nav">
+                                    <a class="nav-link" href="#">позвоните нам<br>+7(921)746-61-06</a>
+                                </li>
+                                <!--<li class="nav-item">
                             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">позвоните нам<br>+7(921)746-61-06</a>
                           </li>-->
-                        </ul>
-                      </div>
+                            </ul>
+                        </div>
                     </div>
-                  </nav>
+                </nav>
 
             </header>
             <main class="container">
@@ -224,7 +249,8 @@
                     </div>
                 </section>
                 <section class="cont_phone_center">
-                    <h3>ждём ваших звонков <b><a href="tel:+79217466106">+7(921)746-61-06</a></b> с 9:00 до 19:00<br>воскресенье: выходной</h3>
+                    <h3>ждём ваших звонков <b><a href="tel:+79217466106">+7(921)746-61-06</a></b> с 9:00 до
+                        19:00<br>воскресенье: выходной</h3>
                 </section>
                 <section class="metal_card_1">
                     <h3 id="fa">фасадные металлические аксессуары</h3>
@@ -285,9 +311,9 @@
                 </section>
 
             </main>
-        </div> 
-    
-   <footer>
+        </div>
+
+        <footer>
             <div class="contact_local">
                 <ul class="ul_footer">
                     <li>Наш адрес: </li>
@@ -296,10 +322,10 @@
                     <li>г. Зеленогорск </li>
                     <li>ул. Путейская дом 1</li>
                 </ul>
-             <div class="map">
+                <div class="map">
                     <img src="images/map_1313.png" class="map_footer" alt="image map">
                 </div>
-                <div class="map_mobale"></div> 
+                <div class="map_mobale"></div>
                 <ul class="ul_footer">
                     <li>Телефон</li>
                     <li>+7(921)746-61-06</li>
