--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
                 </div>
                 <div class="map_mobale"></div>
                 <ul class="ul_footer">
-                    <li>Телефон</li>
-                    <li>+7(921)746-61-06</li>
+                    <li>Телефон:</li>
+                    <li><a href="tel:+79217466106">+7(921)746-61-06</a></li>
                     <li>Часы работы:</li>
                     <li>с 9:00 до 19:00</li>
                     <li>выходной: воскресенье</li>
@@ -337,7 +337,7 @@
             </div>
             <div class="contact_inet">
                 <ul>
-                    <li>zelenogorskstroy@mail.ru</li>
+                    <li><a href="mailto:zelenogorskstroy@mail.ru">zelenogorskstroy@mail.ru</a></li>
                     <li>&copy;Магазин строительных материалов 2019-2021</li>
                     <li>Сайт сделан: <a href="https://vitstudio.ru/#">VitatiaStudio</a></li>
                 </ul>
