--- a/index.html
+++ b/index.html
@@ -41,14 +41,16 @@
 </head>
 
 <body>
+
+
     <div class="container-fluid gibka_main">
         <a href="#" class="button-top" title="Go to top">наверх</a>
         <div class="wrapper">
 
             <header>
-                <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd00;">
+                <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
                     <div class="container-fluid">
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        <button class="navbar-toggler border-2 border-secondary" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
@@ -352,13 +354,17 @@
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
         crossorigin="anonymous"></script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="script.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="script.js"></script>
 
     <!-- Вариант 2: Bootstrap JS отдельно от Popper
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
     -->
+
+    <!--  Кнопка    -->
+    <link rel="stylesheet" href="https://cdn.saas-support.com/widget/cbk.css">
+<script type="text/javascript" src="https://cdn.saas-support.com/widget/cbk.js?wcb_code=1ce49fceec1e36e17317f15c584dd549" charset="UTF-8" async></script>
 </body>
 
 </html>
